# get

./: .air.toml  .golangci.toml  .golangci.yml  .goreleaser.yaml  .lefthook.toml  .mise.toml  AGENTS.md  Cargo.toml  LICENSE.md  Makefile  README.md  RELEASE.md  dist-workspace.toml  go.mod  go.sum  main.go  mise.toml
.codex/skills/commit/: SKILL.md
.config/: mise.toml
.github/workflows/: ci.yml  release.yml
.mise/tasks/: bump  release
docs/: index.html
internal/builder/: builder.go
internal/cli/: completion.go  package.go  root.go  session.go
internal/cli/main/: main.go
internal/cmd/: cmd.go  root.go  root_test.go  sessions.go  version.go  version_test.go
internal/cmd/get/: sessions.json
internal/cmd/main/: main.go
internal/config/: config.go
internal/parser/: parser.go  parser_test.go
internal/session/: session.go
internal/sessions/: sessions.go  sessions_test.go
internal/writer/: writer.go
script/: lint  test
scripts/: check-usage.sh  sync-usage.sh
src/: input_parser.rs  main.rs
tests/: cli.rs
