[package]
name = "get"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/jclem/get"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
winnow = "0.7"
